# BrepRs

./: @enhance.md  CORRECT.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  STAGE2_REVIEW.md  advice.md  bson.d  build-docs.sh  build_output.txt  cargo_build_output.txt  cargo_check_output.txt  cargo_check_verbose.txt  cargo_output.txt  check_output.txt  checklist.md  extern_function.md  future.md  pyproject.toml  roadmap.md  run_rustc.ps1  test_bson.rs  test_virtual_texture.rs  todo.md  virtual_texture.d  wasm-pack.toml
.github/: copilot-instructions.md
.trae/rules/: project_rules.md
.zed/: ai_instructions.md
benches/: boolean_ops.rs
bindings/: README.md
bindings/cpp/: lib.rs
bindings/fortran/: breprs_fortran.f90
bindings/java/: Cargo.toml  lib.rs
bindings/nodejs/: Cargo.toml  lib.rs
bindings/php/: Cargo.toml  lib.rs
bindings/python/: Cargo.toml  lib.rs
docs/: CODING_STANDARDS.md  SUMMARY.md  book.toml
docs/src/de/: README.md
docs/src/en/: README.md  api-reference.md  core-concepts.md  getting-started.md
docs/src/fr/: README.md
docs/src/ru/: README.md
docs/src/zh-CN/: README.md
docs/src/zh-TW/: README.md
examples/cpp/: example.cpp
examples/fortran/: example.f90
examples/java/: Example.java
examples/nodejs/: example.js
examples/php/: example.php
examples/python/: example.py
examples/wasm/: README.md  build.sh  index.html
python/breprs/: __init__.py
python/tests/: __init__.py  test_geometry.py  test_modeling.py  test_primitives.py
src/: lib.rs
src/ai_ml/: mod.rs  tests.rs
src/ai_ml/adaptive/: mod.rs
src/ai_ml/advanced/: mod.rs
src/ai_ml/frameworks/: mod.rs  onnx.rs  pytorch.rs  tensorflow.rs
src/ai_ml/function_tools/: mod.rs
src/ai_ml/interactive/: mod.rs
src/api/: chainable.rs  mod.rs  traits.rs
src/application/: attributes.rs  data_framework.rs  document.rs  mod.rs  topological_naming.rs
src/assembly/: assembly_constraints.rs  assembly_manager.rs  interference_checking.rs  mod.rs
src/benchmarking/: mod.rs  tests.rs
src/cam/: gcode.rs  machining.rs  mod.rs  simulation.rs  toolpath.rs
src/cloud/: collaborative_editing.rs  distributed.rs  load_balancer.rs  mod.rs  task_scheduler.rs
src/collections/: array1.rs  datamap.rs  list.rs  map.rs  mod.rs
src/compat/: api.rs  cloud.rs  geometry.rs  lod.rs  ml.rs  mod.rs  modeling.rs  topexp.rs  topology.rs  toptools.rs
src/data_exchange/: fbx.rs  gltf.rs  iges.rs  jt.rs  mod.rs  modern_formats.rs  obj.rs  ode.rs  ply.rs  step.rs  stl.rs  threemf.rs  usd.rs  usdz.rs  utils.rs  vtk.rs
src/foundation/: exception.rs  handle.rs  memory.rs  mod.rs  tolerance.rs  transient.rs  types.rs
src/geometry/: adaptive_sampling.rs  advanced_intersection.rs  advanced_traits.rs  ax2.rs  axis.rs  batch_query.rs  bezier_boolean.rs  bezier_curve2d.rs  bezier_curve3d.rs  bezier_fit.rs  bezier_split_join.rs  bezier_surface.rs  bounding_box.rs  circle.rs  circle2d.rs  cone.rs  coordinate_system.rs  curvature_analysis.rs  curve_all_algorithms.rs  curve_enum.rs  curve_intersection.rs  cylinder.rs  direction.rs  distance.rs  ellipse.rs  ellipse2d.rs  ffd.rs  fractal.rs  intersection.rs  line.rs  line2d.rs  line_segment.rs  matrix.rs  mod.rs  nurbs_curve2d.rs  nurbs_curve3d.rs  nurbs_surface.rs  plane.rs  point.rs  projection_closest.rs  (+10 more)
src/gpu/: boolean_compute.wgsl  closest_hit.wgsl  compute.rs  fragment.wgsl  gi.wgsl  illumination.rs  mesh.wgsl  mesh_shaders.rs  miss.wgsl  mod.rs  multi_gpu.rs  neural.rs  neural_inference.wgsl  ray_tracing.rs  raygen.wgsl  ssao.wgsl  ssr.wgsl  task.wgsl  virtual_texture.rs
src/i18n/: hot_reload.rs  language.rs  messages.rs  mod.rs  translator.rs
src/mesh/: adaptive.rs  boundary_layer.rs  circumsphere.rs  hex_mesher.rs  mesh_data.rs  mesher2d.rs  mesher3d.rs  mod.rs  polygon_face.rs  quad_mesher.rs  quality.rs  quality_repair.rs  subdivision.rs  tests.rs  triangle_mesh.rs
src/ml/: mod.rs
src/modeling/: advanced_boolean.rs  boolean_operations.rs  boolean_operations_tests.rs  brep_builder.rs  bsp_tree.rs  collision_detection.rs  constraint_solver.rs  csg.rs  cube.rs  feature_history.rs  fillet_chamfer.rs  mod.rs  multi_resolution.rs  multi_resolution_tests.rs  offset_operations.rs  parametric.rs  post_processing.rs  primitives.rs  shape_repair.rs  shape_repair_tests.rs  sketch.rs  solid_decomposition.rs
src/parallel/: boolean_ops.rs  geometry_algorithms.rs  mesh_gen.rs  mod.rs  shape_analysis.rs  task_scheduler.rs  utils.rs
src/plugin/: mod.rs  tests.rs
src/plugins/: mod.rs
src/point_cloud/: clustering.rs  filtering.rs  io.rs  mod.rs  point_cloud.rs  sampling.rs  topology.rs
src/python/: geometry.rs  mod.rs  modeling.rs  primitives.rs  topology.rs
src/serialization/: bson.rs  json.rs  mod.rs  msgpack.rs
src/simulation/: ecosystem_integration.rs  exporter.rs  mod.rs  tests.rs
src/surface/: clipping.rs  fitting_analysis.rs  implicit.rs  mod.rs  reconstruction.rs  surface_analysis.rs  surface_deformation.rs  surface_editing.rs  surface_matching.rs  uv_parameterization.rs
src/topology/: brep.rs  mod.rs  naming.rs  operations.rs  shape_enum.rs  top_exp_explorer.rs  top_exp_tools.rs  top_tools.rs  topods_compound.rs  topods_compsolid.rs  topods_edge.rs  topods_face.rs  topods_location.rs  topods_shape.rs  topods_shell.rs  topods_solid.rs  topods_vertex.rs  topods_wire.rs  validation.rs
src/visualization/: adaptive_lod.rs  advanced_rendering.rs  camera.rs  font.rs  gpu_buffer.rs  gpu_compression.rs  gpu_memory.rs  interactive.rs  light.rs  lod.rs  material.rs  mod.rs  neural_rendering.rs  post_processing.rs  primitives.rs  renderer.rs  texture_stream.rs  view.rs  virtual_texture.rs
src/wasm/: geometry.rs  i18n.rs  io.rs  mesh.rs  mod.rs  modeling.rs  primitives.rs  topology.rs
test_output/: performance_report.txt
tests/: README.md  property_tests.rs
tests/integration/: integration.rs
tests/performance/: benchmarks.rs
tests/stress/: stress.rs
tests/unit/: foundation.rs  geometry.rs  modeling.rs  topology.rs
translations/: de.json  en.json  fr.json  ru.json  zh-CN.json  zh-TW.json
www/: index.html
(+41 files in other folders)
