[package]
name = "breprs"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of boundary representation (BRep) with API compatibility for CAD/CAE/CAM applications"
license = "LGPL-2.1"
repository = "https://github.com/mikewolfli/breprs"
keywords = ["cad", "cam", "cae", "brep", "3d"]
categories = ["cad", "graphics", "mathematics", "science"]

[lib]
name = "breprs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm", "serde", "rayon"]
serde = ["dep:serde", "dep:serde_json", "dep:bincode"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys"]
rayon = ["dep:rayon"]

onnxruntime = ["dep:onnxruntime"]

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }
zip = "0.6"
quick-xml = "0.31"
log = "0.4"
tempfile = "3.10"
libloading = "0.8"


# WebAssembly support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }

# Parallel processing
rayon = { version = "1.8", optional = true }

# GPU support
wgpu = { version = "28.0.0", optional = true }
pollster = { version = "0.3", optional = true }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
tokio = { version = "1.50.0", features = ["time", "rt"] }
rand = { version = "0.9", features = ["std"] }
lz4 = "1.28.1"
zstd = "0.13.3"
rmp-serde = "1.3.1"
bson = { version = "3.1.0", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
mach2 = "0.4"

# ML Framework dependencies
onnxruntime = { version = "0.0.14", optional = true }
tch = { version = "0.23.0", optional = true }
tensorflow = { version = "0.21.0", optional = true }
reqwest = { version = "0.13.2", features = ["blocking", "multipart", "json"] }

[dev-dependencies]
criterion = "0.5"
serde_json = "1.0"
proptest = "1.4"

[[bench]]
name = "boolean_ops"
harness = false
